added setup queries, device_os and hg

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -1,33 +1,45 @@
 [Setup]
-radius_query = SELECT
-            
+radius_query = SELECT 
+    distinct(radius)
+    FROM {project}.{footfall_dataset}.{code_name}_POIs
+
+countries_query = SELECT 
+    distinct(country)
+    FROM {project}.{metadata_dataset}.{campaign_tracker}
+    WHERE code_name = {code_names}
 
 [Retail]
-queries = visitors,Employee_Vs_Visitor,SocioEco,Behavior,HG,Travel_Distance,Travel_Distance_KM,Dwell_Time,Loyalist_Vs_Onetime
+queries = visitors,employee_vs_visitor,SocioEco,Behavior,HG,Travel_Distance,Travel_Distance_KM,Dwell_Time,Loyalist_Vs_Onetime,device_os
 
 visitors=SELECT
-        ls.did,
-        ls.Local_Day,
-        ls.Timestamp,
-        ls.Local_Hour,
-        ls.Longitude,
-        ls.latitude,
-        ls.Local_time,
-        poi.POI_ID,
-        0 as Data_filter,
-        0 as Device_os_id,
-        ls.Device_OS
-        FROM
-        `{project}.Location_Signals.UAE_Data` AS ls
-        JOIN
-        `{project}.Back_End_Footfall.1_POIs` AS poi
-        ON
-        ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
-        WHERE
-        ls.timestamp Between {start_date} AND {end_date}
-        AND poi.Country={country}
+    ls.did,
+    ls.Local_Day,
+    ls.Timestamp,
+    ls.Local_Hour,
+    ls.Longitude,
+    ls.latitude,
+    ls.Local_time,
+    poi.POI_ID,
+    0 as Data_filter,
+    0 as Device_os_id,
+    ls.Device_OS
+    FROM
+    `{project}.{location_signals_dataset}.{country}_Data` AS ls
+    JOIN
+    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
+    WHERE
+    ls.timestamp Between {start_date} AND {end_date}
+    AND poi.Country={country_id}
         
+device_os = Select distinct did, Device_os_id
+    from {project}.{location_signals_dataset}.{device_os_mapping_table}
+    where did in {project}.{footfall_dataset}.{codename}_visitors
 
+hg = Select * 
+    from `{project}.{hg_dataset}.{hg_table}`
+    where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
 [Campaign]
 queries = visitors,footfall
