added all the queries for the retail dashboard

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -9,7 +9,7 @@ countries_query = SELECT
     WHERE code_name = {code_names}
 
 [Retail]
-queries = visitors,employee_vs_visitor,SocioEco,Behavior,HG,Travel_Distance,Travel_Distance_KM,Dwell_Time,Loyalist_Vs_Onetime,device_os
+queries = visitors,employee_vs_visitor,socioeco,behavior,hg,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os
 
 visitors=SELECT
     ls.did,
@@ -32,13 +32,17 @@ visitors=SELECT
     WHERE
     ls.timestamp Between {start_date} AND {end_date}
     AND poi.Country={country_id}
-        
+    
 device_os = Select distinct did, Device_os_id
     from {project}.{location_signals_dataset}.{device_os_mapping_table}
     where did in {project}.{footfall_dataset}.{codename}_visitors
 
 home_graph = Select * 
     from `{project}.{hg_dataset}.{hg_table}`
+    where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
+
+behavior = Select * 
+    from `{project}.POIs_DB_{country}.Behavioral_{country}_RAW_Cumulative`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
 travel_distance = SELECT
@@ -48,6 +52,190 @@ travel_distance = SELECT
     JOIN `{project}.{footfall_dataset}.{codename}_visitors` AS vis
     ON vis.did = hg.did
     
+loyalist_vs_onetime=SELECT
+     did,
+     poi_id,
+     "Loyalists" AS Type
+    FROM (
+     SELECT
+      COUNT(DISTINCT(local_day)) AS days_visited,
+      did,
+      poi_id
+     FROM
+      `{project}.{footfall_dataset}.{codename}_visitors`
+     GROUP BY
+      did,
+      poi_id)
+    WHERE
+     days_visited > 1
+    GROUP BY
+    did,
+     poi_id
+    UNION ALL
+    SELECT
+     did,
+     poi_id,
+     "One time" AS Type
+    FROM (
+     SELECT
+      COUNT(DISTINCT(local_day)) AS days_visited,
+      did,
+      poi_id
+     FROM
+      `{project}.{footfall_dataset}.{codename}_visitors`
+     GROUP BY
+      did,
+      poi_id)
+    WHERE
+     days_visited = 1
+    GROUP BY
+    did,
+     poi_id
+
+employee_vs_visitor = SELECT
+    did,
+    "Employee" as type,
+    poi_id
+    FROM (
+    SELECT
+    COUNT(DISTINCT(local_day)) AS days,
+    did,
+    poi_id
+    FROM
+    `{project}.{footfall_dataset}.{codename}_visitors`
+    GROUP BY
+    did,
+    poi_id
+    HAVING
+    days >=15 )
+    GROUP BY
+    did,
+    poi_id
+    UNION ALL
+    SELECT
+    did,
+    "Visitors" as type,
+    poi_id
+    FROM (
+    SELECT
+    COUNT(DISTINCT(local_day)) AS days,
+    did,
+    poi_id
+    FROM
+    `{project}.{footfall_dataset}.{codename}_visitors`
+    GROUP BY
+    did,
+    poi_id
+    HAVING
+    days <15 )
+    GROUP BY
+    did,
+    poi_id
+
+socioeco = SELECT
+    distinct(did),
+    1 AS Economic_Status,
+    FROM
+    `{project}.{footfall_dataset}.{codename}_visitors` AS VIS
+    WHERE
+    did IN (
+    SELECT
+    did
+    FROM
+    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    JOIN 
+        `{project}.{footfall_dataset}.Lookup_Behavior` as IL
+        on BEH.Behavior_ID = IL.Behavior_ID
+    WHERE 
+    IL.Behavior_Name = 'HNWI')
+
+    UNION ALL
+
+    SELECT
+    distinct(did),
+    2 AS Economic_Status,
+    FROM
+    `{project}.{footfall_dataset}.{codename}_visitors` AS VIS
+    WHERE
+    did IN (
+    SELECT
+    did
+    FROM
+    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    JOIN 
+        `{project}.{footfall_dataset}.Lookup_Behavior` as IL
+        on BEH.Behavior_ID = IL.Behavior_ID
+    WHERE
+    IL.Behavior_Name = 'Luxurious Lifestyle')
+
+    and did NOT IN (
+    SELECT
+    did
+    FROM
+    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    JOIN 
+        `{project}.{footfall_dataset}.Lookup_Behavior` as IL
+        on BEH.Behavior_ID = IL.Behavior_ID
+    WHERE
+    IL.Behavior_Name = 'HNWI')
+
+    UNION ALL
+
+    SELECT 
+    distinct(did), 
+    3 AS Economic_Status,
+    FROM
+    `{project}.{footfall_dataset}.{codename}_visitors` AS VIS
+    WHERE
+    did NOT IN (
+    SELECT
+    did
+    FROM
+    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    JOIN 
+        `{project}.{footfall_dataset}.Lookup_Behavior` as IL
+        on BEH.Behavior_ID = IL.Behavior_ID
+    WHERE
+    IL.Behavior_Name in ('Luxurious Lifestyle','HNWI'))
+
+
+dwell_time = SELECT
+    did ,
+    (MAX(local_hour)-MIN(local_hour)) AS dwell_time,
+    poi_id,
+    local_day
+    FROM
+    `{project}.{footfall_dataset}.{codename}_visitors`
+    GROUP BY
+    local_day,
+    did,
+    poi_id
+    HAVING
+    dwell_time < 6 
+
+travel_distance_km = SELECT 
+    distinct(did),
+    CASE
+    WHEN travel_distance_km BETWEEN 0 AND 5 THEN '0 - 5 km'
+    WHEN travel_distance_km BETWEEN 5 AND  10 THEN '5 - 10 km'
+    WHEN travel_distance_km BETWEEN 10 AND 15 THEN '10 - 15 km'
+    WHEN travel_distance_km BETWEEN 15 AND 20 THEN '15 - 20 km'
+    WHEN travel_distance_km BETWEEN 20 AND 25 THEN '20 - 25 km'
+    WHEN travel_distance_km BETWEEN 25 AND 30 THEN '25 - 30 km'
+    WHEN travel_distance_km BETWEEN 30 AND 35 THEN '30 - 35 km'
+    WHEN travel_distance_km BETWEEN 35 AND 40 THEN '35 - 40 km'
+    WHEN travel_distance_km BETWEEN 40 AND 45 THEN '40 - 45 km'
+    WHEN travel_distance_km BETWEEN 45 AND 50 THEN '45 - 50 km'
+    ELSE '50+ km'
+    END AS distance_category
+
+    FROM (
+    SELECT 
+        did,
+    (travel_distance / 1000) AS travel_distance_km
+
+    FROM `{project}.{footfall_dataset}.{codename}travel_distance`
+    ) AS subquery
 
 [Campaign]
 queries = visitors,footfall
