fixed some namings

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -5,12 +5,12 @@ radius_query = SELECT
 
 countries_query = SELECT 
     distinct(country)
-    FROM {project}.{metadata_dataset}.{campaign_tracker}
-    WHERE code_name = {code_names}
+    FROM {project}.{metadata_dataset}.{campaign_tracker_table}
+    WHERE code_name = {code_name}
 
 [Retail]
 queries = visitors,employee_vs_visitor,socioeco,behavior,hg,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os
-
+queries_union_countries = visitors,behavior
 visitors=SELECT
     ls.did,
     ls.Local_Day,
@@ -28,7 +28,7 @@ visitors=SELECT
     JOIN
     `{project}.{footfall_dataset}.{codename}_pois` AS poi
     ON
-    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<poi.radius
     WHERE
     ls.timestamp Between {start_date} AND {end_date}
     AND poi.Country={country_id}
@@ -38,11 +38,11 @@ device_os = Select distinct did, Device_os_id
     where did in {project}.{footfall_dataset}.{codename}_visitors
 
 home_graph = Select * 
-    from `{project}.{hg_dataset}.{hg_table}`
+    from `{project}.{hwg_dataset}.{hwg_table}`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
 behavior = Select * 
-    from `{project}.POIs_DB_{country}.Behavioral_{country}_RAW_Cumulative`
+    from `{project}.POIs_DB_{country_beh}.Behavioral_{country}_RAW_Cumulative`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
 travel_distance = SELECT
@@ -144,7 +144,7 @@ socioeco = SELECT
     FROM
     `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
     JOIN 
-        `{project}.{footfall_dataset}.Lookup_Behavior` as IL
+        `{project}.{footfall_dataset}.{lookup_behavior_table}` as IL
         on BEH.Behavior_ID = IL.Behavior_ID
     WHERE 
     IL.Behavior_Name = 'HNWI')
@@ -238,7 +238,7 @@ travel_distance_km = SELECT
     ) AS subquery
 
 [Campaign]
-queries = visitors,footfall
+queries = visitors_campaign,footfall
 
 
 [Placelift]
