fixed some bugs in the queries

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -1,15 +1,14 @@
 [Setup]
 radius_query = SELECT 
     distinct(radius)
-    FROM {project}.{footfall_dataset}.{code_name}_POIs
+    FROM {project}.{footfall_dataset}.{codename}_pois
 
-countries_query = SELECT 
-    distinct(country)
+query_metadata = Select date(start_date) as last_update,CURRENT_DATE as today, country
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
-    WHERE code_name = {code_name}
+    WHERE code_name = {codename}
 
 [Retail]
-queries = visitors,employee_vs_visitor,socioeco,behavior,hg,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os
+queries = visitors,employee_vs_visitor,socioeco,behavior,home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os
 queries_union_countries = visitors,behavior
 visitors=SELECT
     ls.did,
@@ -30,19 +29,18 @@ visitors=SELECT
     ON
     ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<poi.radius
     WHERE
-    ls.timestamp Between {start_date} AND {end_date}
-    AND poi.Country={country_id}
+    ls.timestamp Between "{last_update}" AND "{today}"
     
 device_os = Select distinct did, Device_os_id
     from {project}.{location_signals_dataset}.{device_os_mapping_table}
-    where did in {project}.{footfall_dataset}.{codename}_visitors
+    where did in (SELECT DID from {project}.{footfall_dataset}.{codename}_visitors)
 
 home_graph = Select * 
     from `{project}.{hwg_dataset}.{hwg_table}`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
 behavior = Select * 
-    from `{project}.POIs_DB_{country_beh}.Behavioral_{country}_RAW_Cumulative`
+    from `{project}.POI_DB_{country_beh}.Behavioral_{country}_RAW_Cumulative`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
 travel_distance = SELECT
@@ -217,7 +215,7 @@ travel_distance_km = SELECT
     distinct(did),
     CASE
     WHEN travel_distance_km BETWEEN 0 AND 5 THEN '0 - 5 km'
-    WHEN travel_distance_km BETWEEN 5 AND  10 THEN '5 - 10 km'
+    WHEN travel_distance_km BETWEEN 5 AND 10 THEN '5 - 10 km'
     WHEN travel_distance_km BETWEEN 10 AND 15 THEN '10 - 15 km'
     WHEN travel_distance_km BETWEEN 15 AND 20 THEN '15 - 20 km'
     WHEN travel_distance_km BETWEEN 20 AND 25 THEN '20 - 25 km'
@@ -234,7 +232,7 @@ travel_distance_km = SELECT
         did,
     (travel_distance / 1000) AS travel_distance_km
 
-    FROM `{project}.{footfall_dataset}.{codename}travel_distance`
+    FROM `{project}.{footfall_dataset}.{codename}_travel_distance`
     ) AS subquery
 
 [Campaign]
