added visitors_in_competitors and fixed query order

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -3,12 +3,12 @@ radius_query = SELECT
     distinct(radius)
     FROM {project}.{footfall_dataset}.{codename}_pois
 
-query_metadata = Select date(start_date) as last_update,CURRENT_DATE as today, country
+query_metadata = Select date(start_date) as last_update,CURRENT_DATE as today, country,type
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
     WHERE code_name = {codename}
 
-[Retail]
-queries = visitors,employee_vs_visitor,socioeco,behavior,home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os
+[Retail Intelligence Dashboard]
+queries = visitors,behavior,home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os,visitors_in_competitors,employee_vs_visitor,socioeco
 queries_union_countries = visitors,behavior
 visitors=SELECT
     ls.did,
@@ -235,10 +235,36 @@ travel_distance_km = SELECT
     FROM `{project}.{footfall_dataset}.{codename}_travel_distance`
     ) AS subquery
 
-[Campaign]
+visitors_in_competitors = Select distinct(yl.did),com.poi_ID 
+    from `{project}.{footfall_dataset}.{codename}_visitors` as yl 
+    join (
+    
+    Select did,poi_id from `{project}.{footfall_dataset}.{codename}_visitors`  as vis
+    join `{project}.{footfall_dataset}.{codename}_pois` as poi
+    on vis.poi_id = poi.poi_id 
+    where poi.data_filter = 2) as com 
+    on yl.did = com.did
+    join `{project}.{footfall_dataset}.{codename}_pois` as poi
+    on yl.poi_id = poi.poi_id
+    where poi.data_filter = 1 
+
+    UNION ALL
+
+    Select distinct(yl.did),yl.poi_ID 
+    from `{project}.{footfall_dataset}.{codename}_visitors` as yl 
+    join (Select did,poi_id from `{project}.{footfall_dataset}.{codename}_visitors`  as vis
+    join `{project}.{footfall_dataset}.{codename}_pois` as poi
+    on vis.poi_id = poi.poi_id 
+    where poi.data_filter = 2) as com
+    on yl.did = com.did
+    join `{project}.{footfall_dataset}.{codename}_pois` as poi
+    on yl.poi_id = poi.poi_id
+    where poi.data_filter = 1 
+
+[Footfall Dashboard]
 queries = visitors_campaign,footfall
 
 
-[Placelift]
+[Placelift Report]
 queries = visitors,footfall
 
