fixed some bugs

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -8,7 +8,7 @@ query_metadata = Select date(start_date) as last_update,CURRENT_DATE as today, c
     WHERE code_name = {codename}
 
 [Retail Intelligence Dashboard]
-queries = visitors,behavior,home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os,visitors_in_competitors,employee_vs_visitor,socioeco
+queries = visitors,home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os,visitors_in_competitors,employee_vs_visitor,behavior,socioeco
 queries_union_countries = visitors,behavior
 visitors=SELECT
     ls.did,
@@ -239,7 +239,7 @@ visitors_in_competitors = Select distinct(yl.did),com.poi_ID
     from `{project}.{footfall_dataset}.{codename}_visitors` as yl 
     join (
     
-    Select did,poi_id from `{project}.{footfall_dataset}.{codename}_visitors`  as vis
+    Select did,vis.poi_id from `{project}.{footfall_dataset}.{codename}_visitors`  as vis
     join `{project}.{footfall_dataset}.{codename}_pois` as poi
     on vis.poi_id = poi.poi_id 
     where poi.data_filter = 2) as com 
@@ -252,7 +252,7 @@ visitors_in_competitors = Select distinct(yl.did),com.poi_ID
 
     Select distinct(yl.did),yl.poi_ID 
     from `{project}.{footfall_dataset}.{codename}_visitors` as yl 
-    join (Select did,poi_id from `{project}.{footfall_dataset}.{codename}_visitors`  as vis
+    join (Select did,vis.poi_id from `{project}.{footfall_dataset}.{codename}_visitors`  as vis
     join `{project}.{footfall_dataset}.{codename}_pois` as poi
     on vis.poi_id = poi.poi_id 
     where poi.data_filter = 2) as com
