created a common queries section for queries that will be used in placelifts and retail

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -7,29 +7,9 @@ query_metadata = Select date(start_date) as last_update,CURRENT_DATE as today, c
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
     WHERE code_name = {codename}
 
-[Retail Intelligence Dashboard]
-queries = visitors,home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os,visitors_in_competitors,employee_vs_visitor,behavior,socioeco
-queries_union_countries = visitors,behavior
-visitors=SELECT
-    ls.did,
-    ls.Local_Day,
-    ls.Timestamp,
-    ls.Local_Hour,
-    ls.Longitude,
-    ls.latitude,
-    ls.Local_time,
-    poi.POI_ID,
-    0 as Data_filter,
-    0 as Device_os_id,
-    ls.Device_OS
-    FROM
-    `{project}.{location_signals_dataset}.{country}_Data` AS ls
-    JOIN
-    `{project}.{footfall_dataset}.{codename}_pois` AS poi
-    ON
-    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<poi.radius
-    WHERE
-    ls.timestamp Between "{last_update}" AND "{today}"
+[Common Queries]
+queries = home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os,employee_vs_visitor,behavior,socioeco
+queries_union_countries = behavior
     
 device_os = Select distinct did, Device_os_id
     from {project}.{location_signals_dataset}.{device_os_mapping_table}
@@ -140,7 +120,7 @@ socioeco = SELECT
     SELECT
     did
     FROM
-    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    `{project}.{footfall_dataset}.{codename}_behavior` AS BEH
     JOIN 
         `{project}.{footfall_dataset}.{lookup_behavior_table}` as IL
         on BEH.Behavior_ID = IL.Behavior_ID
@@ -159,7 +139,7 @@ socioeco = SELECT
     SELECT
     did
     FROM
-    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    `{project}.{footfall_dataset}.{codename}_behavior` AS BEH
     JOIN 
         `{project}.{footfall_dataset}.Lookup_Behavior` as IL
         on BEH.Behavior_ID = IL.Behavior_ID
@@ -170,7 +150,7 @@ socioeco = SELECT
     SELECT
     did
     FROM
-    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    `{project}.{footfall_dataset}.{codename}_behavior` AS BEH
     JOIN 
         `{project}.{footfall_dataset}.Lookup_Behavior` as IL
         on BEH.Behavior_ID = IL.Behavior_ID
@@ -189,7 +169,7 @@ socioeco = SELECT
     SELECT
     did
     FROM
-    `{project}.{footfall_dataset}.{codename}_Behavior` AS BEH
+    `{project}.{footfall_dataset}.{codename}_behavior` AS BEH
     JOIN 
         `{project}.{footfall_dataset}.Lookup_Behavior` as IL
         on BEH.Behavior_ID = IL.Behavior_ID
@@ -235,6 +215,32 @@ travel_distance_km = SELECT
     FROM `{project}.{footfall_dataset}.{codename}_travel_distance`
     ) AS subquery
 
+
+[Retail Intelligence Dashboard]
+queries = visitors,common_queries,visitors_in_competitors
+queries_union_countries = visitors,behavior
+visitors=SELECT
+    ls.did,
+    ls.Local_Day,
+    ls.Timestamp,
+    ls.Local_Hour,
+    ls.Longitude,
+    ls.latitude,
+    ls.Local_time,
+    poi.POI_ID,
+    0 as Data_filter,
+    0 as Device_os_id,
+    ls.Device_OS
+    FROM
+    `{project}.{location_signals_dataset}.{country}_Data` AS ls
+    JOIN
+    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<poi.radius
+    WHERE
+    ls.timestamp Between "{last_update}" AND "{today}"
+
+
 visitors_in_competitors = Select distinct(yl.did),com.poi_ID 
     from `{project}.{footfall_dataset}.{codename}_visitors` as yl 
     join (
@@ -261,10 +267,6 @@ visitors_in_competitors = Select distinct(yl.did),com.poi_ID
     on yl.poi_id = poi.poi_id
     where poi.data_filter = 1 
 
-[Footfall Dashboard]
-queries = visitors_campaign,footfall
-
-
-[Placelift Report]
-queries = visitors,footfall
+[Placelift]
+queries = visitors,common_queries,footfall
 
