--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -228,15 +228,13 @@ visitors=SELECT
     ls.latitude,
     ls.Local_time,
     poi.POI_ID,
-    0 as Data_filter,
-    0 as Device_os_id,
-    ls.Device_OS
+    0 as Data_filter
     FROM
     `{project}.{location_signals_dataset}.{country}_Data` AS ls
     JOIN
     `{project}.{footfall_dataset}.{codename}_pois` AS poi
     ON
-    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<poi.radius
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
     WHERE
     ls.timestamp Between "{last_update}" AND "{today}"
 
@@ -268,5 +266,115 @@ visitors_in_competitors = Select distinct(yl.did),com.poi_ID
     where poi.data_filter = 1 
 
 [Placelift]
-queries = visitors,common_queries,footfall
+queries = visitors,common_queries,footfall,reaction_time
 
+
+
+visitors = SELECT
+    ls.did,
+    ls.Local_Day,
+    ls.Timestamp,
+    ls.Local_Hour,
+    ls.Longitude,
+    ls.latitude,
+    ls.Local_time,
+    poi.POI_ID,
+    0 AS Data_filter,
+    seg.controlled
+    FROM
+    `{project}.{location_signals_dataset}.{country}_Data` AS ls
+    JOIN
+    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
+    JOIN
+    `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    ON
+    seg.did = ls.did
+    WHERE
+    ls.timestamp BETWEEN "{last_update}"
+    AND "{today}"
+    AND ls.did IN (
+    SELECT
+        DISTINCT(devraw)
+    FROM
+        `{project}.{back_end_report_dataset}.{codename}`
+    UNION ALL
+    SELECT
+        did
+    FROM
+        `{project}.{Campaign_segments_dataset}.{codename}_Segments`
+    WHERE
+        Controlled = TRUE )
+
+
+
+footfall = SELECT
+  visitors_count,
+  uniques_count,
+  uniques.controlled,
+  (visitors_count/uniques_count)*100 as Conversion_Rate
+FROM (
+  SELECT
+    COUNT(DISTINCT(vis.did)) AS visitors_count,
+    seg.controlled
+  FROM
+    `{project}.{footfall_dataset}.{codename}_visitors` AS vis
+  JOIN
+    `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+  ON
+    vis.did = seg.DID
+  GROUP BY
+    seg.controlled) AS visitors
+JOIN (
+  SELECT
+    COUNT(DISTINCT(did)) AS uniques_count,
+    controlled
+  FROM (
+    SELECT
+      did,
+      controlled
+    FROM
+      `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    where controlled = true
+    UNION ALL
+    SELECT
+      did,
+      controlled
+    FROM
+      `{project}.{back_end_report_dataset}.{codename}` AS vis
+    JOIN
+      `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    ON
+      vis.devraw = seg.DID )
+  GROUP BY
+    controlled )AS uniques
+ON
+  visitors.controlled = uniques.controlled
+
+
+
+reaction_time = SELECT
+      devraw  AS did,
+      daydiff
+      FROM (
+      SELECT
+          DISTINCT devraw,
+          MIN(e.timestamp) AS exposure,
+          MIN(v.Local_Time) AS visit,
+          DATE_DIFF(MIN(v.Local_Time), MIN(e.timestamp), day) AS daydiff
+      FROM
+          `{project}.{back_end_report_dataset}.{codename}` AS e
+      JOIN
+          `{project}.{footfall_dataset}.{codename}_visitors` AS v
+      ON
+          devraw=DID
+       where v.controlled = false
+      GROUP BY
+          devraw
+      HAVING
+          daydiff >0 )
+      GROUP BY
+      daydiff
+      ORDER BY
+      daydiff asc
