--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -3,7 +3,7 @@ radius_query = SELECT
     distinct(radius)
     FROM {project}.{footfall_dataset}.{codename}_pois
 
-query_metadata = Select date(start_date) as last_update,CURRENT_DATE as today, country,type
+query_metadata = Select date(last_update) as last_update,CURRENT_DATE as today, country,type
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
     WHERE code_name = {codename}
 
@@ -215,7 +215,7 @@ travel_distance_km = SELECT
     ) AS subquery
 
 
-[Retail Intelligence Dashboard]
+[Retail]
 queries = visitors,common_queries,visitors_in_competitors
 visitors=SELECT
     ls.did,
@@ -308,71 +308,61 @@ visitors = SELECT
 
 
 footfall = SELECT
-  visitors_count,
-  uniques_count,
-  uniques.controlled,
-  (visitors_count/uniques_count)*100 as Conversion_Rate
-FROM (
-  SELECT
-    COUNT(DISTINCT(vis.did)) AS visitors_count,
-    seg.controlled
-  FROM
-    `{project}.{footfall_dataset}.{codename}_visitors` AS vis
-  JOIN
-    `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
-  ON
-    vis.did = seg.DID
-  GROUP BY
-    seg.controlled) AS visitors
-JOIN (
-  SELECT
-    COUNT(DISTINCT(did)) AS uniques_count,
-    controlled
+    visitors_count,
+    uniques_count,
+    uniques.controlled,
+    (visitors_count/uniques_count)*100 as Conversion_Rate
   FROM (
     SELECT
-      did,
-      controlled
+      COUNT(DISTINCT(vis.did)) AS visitors_count,
+      seg.controlled
     FROM
-      `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
-    where controlled = true
-    UNION ALL
-    SELECT
-      did,
-      controlled
-    FROM
-      `{project}.{back_end_report_dataset}.{codename}` AS vis
+      `{project}.{footfall_dataset}.{codename}_visitors` AS vis
     JOIN
       `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
     ON
-      vis.devraw = seg.DID )
-  GROUP BY
-    controlled )AS uniques
-ON
-  visitors.controlled = uniques.controlled
+      vis.did = seg.DID
+    GROUP BY
+      seg.controlled) AS visitors
+  JOIN (
+    SELECT
+      COUNT(DISTINCT(did)) AS uniques_count,
+      controlled
+    FROM (
+      SELECT
+        did,
+        controlled
+      FROM
+        `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+      where controlled = true
+      UNION ALL
+      SELECT
+        did,
+        controlled
+      FROM
+        `{project}.{back_end_report_dataset}.{codename}` AS vis
+      JOIN
+        `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+      ON
+        vis.devraw = seg.DID )
+    GROUP BY
+      controlled )AS uniques
+  ON
+    visitors.controlled = uniques.controlled
 
 
 
 reaction_time = SELECT
-      devraw  AS did,
-      daydiff
-      FROM (
-      SELECT
-          DISTINCT devraw,
-          MIN(e.timestamp) AS exposure,
-          MIN(v.Local_Time) AS visit,
-          DATE_DIFF(MIN(v.Local_Time), MIN(e.timestamp), day) AS daydiff
-      FROM
-          `{project}.{back_end_report_dataset}.{codename}` AS e
-      JOIN
-          `{project}.{footfall_dataset}.{codename}_visitors` AS v
-      ON
-          devraw=DID
-       where v.controlled = false
-      GROUP BY
-          devraw
-      HAVING
-          daydiff >0 )
-      GROUP BY
-      daydiff
-      ORDER BY
-      daydiff asc
+  DISTINCT devraw,
+  DATE_DIFF(MIN(v.Local_Time), MIN(e.timestamp), day) AS daydiff
+  FROM
+      `{project}.{back_end_report_dataset}.{codename}` AS e
+  JOIN
+      `{project}.{footfall_dataset}.{codename}_visitors` AS v
+  ON
+      devraw=DID
+    where v.controlled = false
+  GROUP BY
+      devraw
+  HAVING
+      daydiff >0 
