changed metadata query to get differenct parameters

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -3,7 +3,7 @@ radius_query = SELECT
     distinct(radius)
     FROM {project}.{footfall_dataset}.{codename}_pois
 
-query_metadata = Select date(last_update) as last_update,CURRENT_DATE as today, country,type
+query_metadata = Select end_date, type, country, Interval, start_date
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
     WHERE code_name = {codename}
 
@@ -234,7 +234,7 @@ visitors=SELECT
     ON
     ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
     WHERE
-    ls.timestamp Between "{last_update}" AND "{today}"
+    ls.timestamp Between "{start_date_q}" AND "{end_date_q}"
 
 
 visitors_in_competitors = Select distinct(yl.did),com.poi_ID 
@@ -290,8 +290,8 @@ visitors = SELECT
     ON
     seg.did = ls.did
     WHERE
-    ls.timestamp BETWEEN "{last_update}"
-    AND "{today}"
+    ls.timestamp BETWEEN "{start_date_q}"
+    AND "{end_date_q}"
     AND ls.did IN (
     SELECT
         DISTINCT(devraw)
