added visitors to placelifts with no ber

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -370,3 +370,33 @@ reaction_time = SELECT
 
 [Placelift No BER]
 
+
+queries = visitors,common_queries,footfall,reaction_time
+
+
+
+visitors = SELECT
+    ls.did,
+    ls.Local_Day,
+    ls.Timestamp,
+    ls.Local_Hour,
+    ls.Longitude,
+    ls.latitude,
+    ls.Local_time,
+    poi.POI_ID,
+    0 AS Data_filter,
+    seg.controlled
+    FROM
+    `{project}.{location_signals_dataset}.{country}_Data` AS ls
+    JOIN
+    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
+    JOIN
+    `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    ON
+    seg.did = ls.did
+    WHERE
+    ls.timestamp BETWEEN "{start_date_q}"
+    AND "{end_date_q}"
+    
