fixed the dates of the run, and added a type for placelifts without BERs

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -3,7 +3,7 @@ radius_query = SELECT
     distinct(radius)
     FROM {project}.{footfall_dataset}.{codename}_pois
 
-query_metadata = Select end_date, type, country, Interval, start_date
+query_metadata = Select end_date, type, country, time_interval, last_update, backend_report
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
     WHERE code_name = {codename}
 
@@ -24,10 +24,12 @@ behavior = Select *
 
 travel_distance = SELECT
     distinct(hg.DID),
-    ST_DISTANCE(ST_GEOGPOINT(vis.longitude,vis.latitude),ST_GEOGPOINT(hg.long1,hg.lat1)) AS travel_distance
+    ST_DISTANCE(ST_GEOGPOINT(poi.longitude,poi.latitude),ST_GEOGPOINT(hg.long1,hg.lat1)) AS travel_distance
     FROM `{project}.{footfall_dataset}.{codename}_home_graph` AS hg
-    JOIN `{project}.{footfall_dataset}.{codename}_visitors` AS vis
+    JOIN (Select distinct did,poi_id from `{project}.{footfall_dataset}.{codename}_visitors`) AS vis
     ON vis.did = hg.did
+    JOIN `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON vis.POI_ID = poi.poi_ID
     
 loyalist_vs_onetime=SELECT
      did,
@@ -371,7 +373,7 @@ reaction_time = SELECT
 [Placelift No BER]
 
 
-queries = visitors,common_queries,footfall,reaction_time
+queries = visitors,common_queries
 
 
 
