added last_update update query

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -7,6 +7,9 @@ query_metadata = Select end_date, type, country, time_interval, last_update, bac
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
     WHERE code_name = {codename}
 
+update_last_update = UPDATE `{project}.{metadata_dataset}.{campaign_tracker_table}`
+    Set last_update = "{new_last_update}"
+    where code_name = {codename}
 [Common Queries]
 queries = home_graph,travel_distance,travel_distance_km,dwell_time,loyalist_vs_onetime,device_os,employee_vs_visitor,behavior,socioeco
     
@@ -266,7 +269,7 @@ visitors_in_competitors = Select distinct(yl.did),com.poi_ID
     where poi.data_filter = 1 
 
 [Placelift]
-queries = visitors,common_queries,footfall,reaction_time
+queries = visitors,common_queries,footfall,reaction_time,share_of_volume
 
 
 
@@ -368,6 +371,37 @@ reaction_time = SELECT
       devraw
   HAVING
       daydiff >0 
+
+
+share_of_volume = SELECT
+  Count_uniques,
+  serv.segment,
+  Count_total,
+  (Count_uniques/Count_total) AS Share_of_Volume
+  FROM (
+    SELECT
+      COUNT(DISTINCT(devraw)) AS Count_uniques,
+      seg.segment
+    FROM
+      `{project}.{back_end_report_dataset}.{codename}` AS ber
+    JOIN
+      `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    ON
+      seg.did = ber.devraw
+    GROUP BY
+      segment) AS serv
+  JOIN (
+    SELECT
+      COUNT(DISTINCT(did)) AS Count_total,
+      seg.segment
+    FROM
+      `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
+    GROUP BY
+      segment) AS total
+  ON
+    total.segment = serv.segment
+  WHERE
+    serv.segment !="Controlled"
 
 
 [Placelift No BER]
