--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -436,3 +436,30 @@ visitors = SELECT
     ls.timestamp BETWEEN "{start_date_q}"
     AND "{end_date_q}"
      
+
+
+[Placelift No Segments]
+
+queries = visitors,common_queries
+
+
+
+visitors = SELECT
+    ls.did,
+    ls.Local_Day,
+    ls.Timestamp,
+    ls.Local_Hour,
+    ls.Longitude,
+    ls.latitude,
+    ls.Local_time,
+    poi.POI_ID,
+    0 AS Data_filter
+    FROM
+    `{project}.{location_signals_dataset}.{country}_Data` AS ls
+    JOIN
+    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
+    WHERE
+    ls.timestamp BETWEEN "{start_date_q}"
+    AND "{end_date_q}"
