--- a/scripts/segments/queries.ini
+++ b/scripts/segments/queries.ini
@@ -1,26 +1,26 @@
 [queries]
-query_POI = SELECT did
+query_POI = SELECT DID
   from `{project}.{location_signals_dataset}.{country}_Data` as ls
   
   join `{project}.POI_DB_{country_beh}.All_POIs_{country}` as poi
 
   on st_distance(st_geogpoint(ls.longitude,ls.latitude),st_geogpoint(poi.long,poi.lat))<{radius}
 
-  where ls.Timestamp > date_add(current_datetime(), INTERVAL -3 MONTH)
+  where ls.Timestamp > Timestamp(date_add(current_datetime(), INTERVAL -3 MONTH))
 
  {filters}
 
 
-query_HNWI = Select did
+query_HNWI = Select DID
   from `{project}.Recurring_Segments.{country}_HNWI`
 
 
-query_HG = Select did
+query_HG = Select DID
   from `{project}.{hwg_dataset}.{hwg_table}` as HG
   JOIN
-    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    `{project}.{footfall_dataset}.{code_name}_pois` AS poi
     ON
-    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{hg_radius} 
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius} 
 
 query_behavior = SELECT DISTINCT(DID) 
   FROM {project}.POI_DB_{country_beh}.Behavioral_{country}_RAW_Cumulative 
