added controll string to footfall

--- a/scripts/automation/queries.ini
+++ b/scripts/automation/queries.ini
@@ -316,6 +316,10 @@ footfall = SELECT
     visitors_count,
     uniques_count,
     uniques.controlled,
+    CASE
+    WHEN uniques.controlled THEN 'Controlled'
+    ELSE 'Exposed'
+    END AS controlled_str
     (visitors_count/uniques_count)*100 as Conversion_Rate
   FROM (
     SELECT
