queries to distinct

--- a/projects/segments/queries.ini
+++ b/projects/segments/queries.ini
@@ -1,5 +1,5 @@
 [queries]
-query_POI = SELECT DID
+query_POI = SELECT distinct(DID)
   from `{project}.{location_signals_dataset}.{country}_Data` as ls
   
   join `{project}.POI_DB_{country_beh}.All_POIs_{country}` as poi
@@ -11,11 +11,11 @@ query_POI = SELECT DID
  {filters}
 
 
-query_HNWI = Select DID
+query_HNWI = Select distinct(DID)
   from `{project}.Recurring_Segments.{country}_HNWI`
 
 
-query_HG = Select DID
+query_HG = Select distinct(DID)
   from `{project}.{hwg_dataset}.{hwg_table}` as HG
   JOIN
     `{project}.{footfall_dataset}.{code_name}_pois` AS poi
