added segments to metatdata query

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -3,7 +3,7 @@ radius_query = SELECT
     distinct(radius)
     FROM {project}.{footfall_dataset}.{codename}_pois
 
-query_metadata = Select end_date, type, country, time_interval, last_update, backend_report
+query_metadata = Select end_date, type, country, time_interval, last_update, backend_report, segments
     FROM {project}.{metadata_dataset}.{campaign_tracker_table}
     WHERE code_name = {codename}
 
