added the HNWI into the behavioral Segments

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -24,6 +24,8 @@ home_graph = Select *
 behavior = Select * 
     from `{project}.POI_DB_{country_beh}.Behavioral_{country}_RAW_Cumulative`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
+    Union ALL
+    Select distinct DID,87,"HNWI" from {project}.Recurring_Segments.{country}_HNWI
 
 travel_distance = SELECT
     distinct(hg.DID),
