fixed some queries and changed BER process to transfer to used at the end

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -26,6 +26,7 @@ behavior = Select *
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
     Union ALL
     Select distinct DID,87,"HNWI" from {project}.Recurring_Segments.{country}_HNWI
+    where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
 travel_distance = SELECT
     distinct(hg.DID),
@@ -321,7 +322,7 @@ footfall = SELECT
     CASE
     WHEN uniques.controlled THEN 'Controlled'
     ELSE 'Exposed'
-    END AS controlled_str
+    END AS controlled_str,
     (visitors_count/uniques_count)*100 as Conversion_Rate
   FROM (
     SELECT
@@ -376,7 +377,7 @@ reaction_time = SELECT
   GROUP BY
       devraw
   HAVING
-      daydiff >0 
+      daydiff >=0 
 
 
 share_of_volume = SELECT
