--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -319,7 +319,7 @@ footfall = SELECT
     CASE
     WHEN uniques.controlled THEN 'Controlled'
     ELSE 'Exposed'
-    END AS controlled_str
+    END AS controlled_str,
     (visitors_count/uniques_count)*100 as Conversion_Rate
   FROM (
     SELECT
