altered footfall to only count uniques untill the measured date, replaced select * with values

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -21,7 +21,7 @@ home_graph = Select *
     from `{project}.{hwg_dataset}.{hwg_table}`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
 
-behavior = Select * 
+behavior = Select DID,Behavior_ID,Behavior_name 
     from `{project}.POI_DB_{country_beh}.Behavioral_{country}_RAW_Cumulative`
     where did in (select distinct(did) from {project}.{footfall_dataset}.{codename}_visitors)
     Union ALL
@@ -356,7 +356,10 @@ footfall = SELECT
       JOIN
         `{project}.{Campaign_segments_dataset}.{codename}_Segments` AS seg
       ON
-        vis.devraw = seg.DID )
+        vis.devraw = seg.DID 
+      WHERE 
+        vis.timestamp <"{end_date_q}"
+        )
     GROUP BY
       controlled )AS uniques
   ON
