added business professionals as an option from WG, and switched order of if statements

--- a/projects/segments/queries.ini
+++ b/projects/segments/queries.ini
@@ -16,11 +16,22 @@ query_HNWI = Select distinct(DID)
 
 
 query_HG = Select distinct(DID)
-  from `{project}.{hwg_dataset}.{hwg_table}` as HG
+  from `{project}.{hwg_dataset}.{hg_table}` as HG
   JOIN
     `{project}.{footfall_dataset}.{code_name}_pois` AS poi
     ON
     ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius} 
+
+query_WG = SELECT
+    distinct(DID)
+  FROM
+    `{project}.{hwg_dataset}.{wg_table}` as wg
+  JOIN
+      `{project}.{hwg_dataset}.{pol_map_table}` AS map
+    ON
+      map.PID = wg.PID
+    WHERE
+      map.Country = "{country}"
 
 query_behavior = SELECT DISTINCT(DID) 
   FROM {project}.POI_DB_{country_beh}.Behavioral_{country}_RAW_Cumulative 
