excluded dwell time where its the same hour

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -196,7 +196,8 @@ dwell_time = SELECT
     did,
     poi_id
     HAVING
-    dwell_time < 6 
+    max(local_hour) != MIN(Local_hour)
+    and dwell_time < 6 
 
 travel_distance_km = SELECT 
     distinct(did),
