added a condition to the visitors query

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -244,6 +244,7 @@ visitors=SELECT
     ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
     WHERE
     ls.timestamp Between "{start_date_q}" AND "{end_date_q}"
+    and poi.radius<{radius}
 
 
 visitors_in_competitors = Select distinct(yl.did),com.poi_ID 
@@ -301,6 +302,7 @@ visitors = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_q}"
     AND "{end_date_q}"
+    and poi.radius<{radius}
     AND ls.did IN (
     SELECT
         DISTINCT(devraw)
@@ -446,6 +448,7 @@ visitors = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_q}"
     AND "{end_date_q}"
+    and poi.radius<{radius}
      
 
 
@@ -474,6 +477,7 @@ visitors = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_q}"
     AND "{end_date_q}"
+    and poi.radius<{radius}
 
 
 visitors_before = SELECT
@@ -495,6 +499,7 @@ visitors_before = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_before}"
     AND "{end_date_before}"
+    and poi.radius<{radius}
 
 
 footfall = SELECT
