--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -244,7 +244,7 @@ visitors=SELECT
     ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
     WHERE
     ls.timestamp Between "{start_date_q}" AND "{end_date_q}"
-    and poi.radius<{radius}
+    and poi.radius={radius}
 
 
 visitors_in_competitors = Select distinct(yl.did),com.poi_ID 
@@ -448,7 +448,7 @@ visitors = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_q}"
     AND "{end_date_q}"
-    and poi.radius<{radius}
+    and poi.radius={radius}
      
 
 
@@ -477,7 +477,7 @@ visitors = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_q}"
     AND "{end_date_q}"
-    and poi.radius<{radius}
+    and poi.radius={radius}
 
 
 visitors_before = SELECT
@@ -499,7 +499,7 @@ visitors_before = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_before}"
     AND "{end_date_before}"
-    and poi.radius<{radius}
+    and poi.radius={radius}
 
 
 footfall = SELECT
@@ -583,3 +583,137 @@ footfall = SELECT
       poi.poi_name ) AS before
   ON
     during.poi_name = before.poi_name
+
+[OOH]
+
+queries = visitors,common_queries,visitors_before,footfall
+
+
+
+visitors = SELECT
+    ls.did,
+    ls.Local_Day,
+    ls.Timestamp,
+    ls.Local_Hour,
+    ls.Longitude,
+    ls.latitude,
+    ls.Local_time,
+    poi.POI_ID,
+    0 AS Data_filter
+    FROM
+    `{project}.{location_signals_dataset}.{country}_Data` AS ls
+    JOIN
+    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
+    WHERE
+    ls.timestamp BETWEEN "{start_date_q}"
+    AND "{end_date_q}"
+    and poi.radius={radius}
+
+
+visitors_before = SELECT
+    ls.did,
+    ls.Local_Day,
+    ls.Timestamp,
+    ls.Local_Hour,
+    ls.Longitude,
+    ls.latitude,
+    ls.Local_time,
+    poi.POI_ID,
+    0 AS Data_filter
+    FROM
+    `{project}.{location_signals_dataset}.{country}_Data` AS ls
+    JOIN
+    `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+    ST_DISTANCE(ST_GEOGPOINT(ls.Longitude,ls.latitude),ST_GEOGPOINT(poi.longitude,poi.latitude))<{radius}
+    WHERE
+    ls.timestamp BETWEEN "{start_date_before}"
+    AND "{end_date_before}"
+    and poi.radius={radius}
+
+
+footfall = SELECT
+    count_during,
+    count_before,
+    ((count_during-count_before)/count_before)*100 AS uplift,
+    'Total' AS type,
+    during.poi_name
+  FROM (
+    SELECT
+      SUM(count_during) AS count_during,
+      poi_name
+    FROM (
+      SELECT
+        COUNT(DISTINCT(local_day)) AS count_during,
+        did,
+        poi.poi_name
+      FROM
+        `{project}.{footfall_dataset}.{codename}_visitors` AS vis
+      JOIN
+        `{project}.{footfall_dataset}.{codename}_pois` AS poi
+      ON
+        vis.poi_id = poi.poi_id
+      GROUP BY
+        poi.poi_name,
+        did )
+    GROUP BY
+      poi_name ) AS during
+  JOIN (
+    SELECT
+      SUM(count_before) AS count_before,
+      poi_name
+    FROM (
+      SELECT
+        COUNT(DISTINCT(local_day)) AS count_before,
+        did,
+        poi.poi_name
+      FROM
+        `{project}.{footfall_dataset}.{codename}_visitors_before` AS vis
+      JOIN
+        `{project}.{footfall_dataset}.{codename}_pois` AS poi
+      ON
+        vis.poi_id = poi.poi_id
+      GROUP BY
+        poi.poi_name,
+        did )
+    GROUP BY
+      poi_name ) AS before
+  ON
+    during.poi_name = before.poi_name
+  UNION ALL
+  SELECT
+    count_during,
+    count_before,
+    ((count_during-count_before)/count_before)*100 AS uplift,
+    "Uniques" AS type,
+    during.poi_name
+  FROM (
+    SELECT
+      COUNT(DISTINCT(did)) AS count_during,
+      poi.poi_name
+    FROM
+      `{project}.{footfall_dataset}.{codename}_visitors` AS vis
+    JOIN
+      `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+      vis.poi_id = poi.poi_id
+    GROUP BY
+      poi.poi_name ) AS during
+  JOIN (
+    SELECT
+      COUNT(DISTINCT(did)) AS count_before,
+      poi.poi_name
+    FROM
+      `{project}.{footfall_dataset}.{codename}_visitors_before` AS vis
+    JOIN
+      `{project}.{footfall_dataset}.{codename}_pois` AS poi
+    ON
+      vis.poi_id = poi.poi_id
+    GROUP BY
+      poi.poi_name ) AS before
+  ON
+    during.poi_name = before.poi_name
+
+
