fixed a bug with the placelift visitor query

--- a/projects/automation/queries.ini
+++ b/projects/automation/queries.ini
@@ -302,7 +302,7 @@ visitors = SELECT
     WHERE
     ls.timestamp BETWEEN "{start_date_q}"
     AND "{end_date_q}"
-    and poi.radius<{radius}
+    and poi.radius={radius}
     AND ls.did IN (
     SELECT
         DISTINCT(devraw)
